Add noteWitness and feeRate endpoints
